syntax = "proto3";

package proto;

service Blockchain {
	rpc AddBlock(AddBlockRequest) returns (AddBlockResponse) {}
	rpc GetBlockchain(GetBlockchainRequest) returns (GetBlockchainResponse) {}
}

message AddBlockRequest {
    BlockData data = 1;
}

message AddBlockResponse {
	bool ACK = 1;
}

message BlockData {
	string timestamp = 1;
	string author = 2;
	string commitHash = 3;
	map<string, string> fileHashes = 4;
}

message Block {
	string prevBlockHash = 1;
	BlockData data = 2;
	string hash = 3;
}

message GetBlockchainRequest {}

message GetBlockchainResponse {
	repeated Block blocks = 1;
}
